calico-gloo-istio/istio/03-rate-limit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: istio-system
  labels:
    app: redis
spec:
  ports:
  - name: redis
    port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - name: redis
          containerPort: 6379
      restartPolicy: Always
      serviceAccountName: ""
---
apiVersion: v1
kind: Service
metadata:
  name: rate-limit
  namespace: istio-system
  labels:
    app: rate-limit
spec:
  ports:
  - name: http-port
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: debug-port
    port: 6070
    targetPort: 6070
    protocol: TCP
  - name: grpc-port
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: metrics-port
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: rate-limit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limit
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-limit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rate-limit
    spec:
      containers:
      - image: envoyproxy/ratelimit:6a2e8262 # 2024-12-01
        imagePullPolicy: IfNotPresent
        name: rate-limit
        command: ["/bin/ratelimit"]
        ports:
        - containerPort: 8080
        - containerPort: 8081
        - containerPort: 6070
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /data/ratelimit/config
        - name: prometheus-mappings
          mountPath: /etc/config/prometheus-mappings.yaml
          readOnly: true          
      volumes:
      - name: config-volume
        configMap:
          name: rate-limit-config
      - name: prometheus-mappings
        configMap:
          name: prometheus-mappings
---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: rate-limit-config
   namespace: istio-system   
 data:
   config.yaml: |
     domain: 'rate-limiter'
     descriptors:
       - key: header_match
         value: "headers" 
         rate_limit:
           unit: minute
           requests_per_unit: 10
       - key: header_match
         value: "get"
         rate_limit:
           unit: minute
           requests_per_unit: 2
       - key: for_an_http_header
         value: "an_http_header"
         rate_limit:
           unit: minute
           requests_per_unit: 1
